fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,8 @@ body {
   padding: 25px 15px;
 }
 
-#content .twitr-feed > div > .row {
+#content .twitr-feed > div > .row,
+#content .twitr-feed .simplebar-content > .row {
   min-height: 50px;
   padding: 15px 0;
   border-bottom-style: solid;
@@ -171,19 +172,4 @@ body {
   width: 100%;
   border-radius: 10px;
   display: none;
-}
-
-.glyphicon-refresh-animate {
-  -animation: spin .7s infinite linear;
-  -webkit-animation: spin2 .7s infinite linear;
-}
-
-@-webkit-keyframes spin2 {
-  from { -webkit-transform: rotate(0deg);}
-  to { -webkit-transform: rotate(360deg);}
-}
-
-@keyframes spin {
-  from { transform: scale(1) rotate(0deg);}
-  to { transform: scale(1) rotate(360deg);}
 }
